--- a/.gitignore
+++ b/.gitignore
@@ -100,3 +100,4 @@
 /IMBO_MAINFRAME/VSBoundingBox.cso
 /IMBO_MAINFRAME/VSBlend.cso
 /IMBO_MAINFRAME/VSAnimationObject.cso
+/ipch/IMBO_MAINFRAME-7e490fc0
